--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,4 @@
 @import url(./blocks/footer/footer.css);
 @import url(./blocks/opacity/opacity.css);
 @import url(./blocks/background-opacity/background-opacity.css);
+@import url(./blocks/form/form.css);
